# opcny-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  railway.toml
.claude/: settings.json
.claude/commands/: add-agent.md  add-platform.md  audit-project.md  implement-agent.md  lint-and-fix.md  setup-alembic.md  write-tests.md
agents/: __init__.py  analytics.py  base.py  content_review.py  social_media.py
alembic/: env.py
alembic/versions/: 001_create_agent_memory.py
api/: routes.py
config/: __init__.py  persona.py  settings.py
docs/: admin-panel-integration.md
models/: __init__.py  base.py  tables.py
services/: __init__.py  claude_service.py  discord_service.py  embedding_service.py  ga4_service.py  instagram_service.py  memory_service.py  twitter_service.py
tasks/: scheduler.py
templates/: analytics_report.j2  post_discord.j2  post_instagram.j2  post_twitter.j2  review_notification.j2
tests/: conftest.py  test_base_agent.py  test_claude_service.py  test_content_review_agent.py  test_discord_service.py  test_settings.py
utils/: notifications.py
