[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opcny-agents"
version = "0.1.0"
description = "Multi-agent systém pre OptionsSimulator.com — social media, content review, analytics"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Scheduler
    "apscheduler>=3.10.4",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # AI
    "anthropic>=0.39.0",

    # Social Media
    "discord.py>=2.4.0",
    "tweepy>=4.14.0",

    # Analytics
    "google-analytics-data>=0.18.0",
    "google-auth>=2.35.0",

    # Utilities
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "api*", "config*", "models*", "services*", "tasks*", "utils*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
